make-debug.out
[ 66%] Built target json_extension
[ 66%] Building CXX object extension/duckdb_ast/CMakeFiles/duckdb_ast_extension.dir/src/read_ast_function.cpp.o
/mnt/aux-data/teague/Projects/duckdb_ast/src/read_ast_function.cpp: In function ‘void duckdb::ReadASTFunction(duckdb::ClientContext&, duckdb::TableFunctionInput&, duckdb::DataChunk&)’:
/mnt/aux-data/teague/Projects/duckdb_ast/src/read_ast_function.cpp:64:42: error: no matching function for call to ‘duckdb::UnifiedASTBackend::ProjectToTable(duckdb::ASTResult&, duckdb::DataChunk&, duckdb::idx_t&)’
   64 |         UnifiedASTBackend::ProjectToTable(data.result, output, output_index);
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /mnt/aux-data/teague/Projects/duckdb_ast/src/read_ast_function.cpp:6:
/mnt/aux-data/teague/Projects/duckdb_ast/src/include/unified_ast_backend.hpp:44:17: note: candidate: ‘static void duckdb::UnifiedASTBackend::ProjectToTable(const duckdb::ASTResult&, duckdb::DataChunk&, duckdb::idx_t&, duckdb::idx_t&)’
   44 |     static void ProjectToTable(const ASTResult& result, DataChunk& output, idx_t& current_row, idx_t& output_index);
      |                 ^~~~~~~~~~~~~~
/mnt/aux-data/teague/Projects/duckdb_ast/src/include/unified_ast_backend.hpp:44:17: note:   candidate expects 4 arguments, 3 provided
gmake[3]: *** [extension/duckdb_ast/CMakeFiles/duckdb_ast_extension.dir/build.make:121: extension/duckdb_ast/CMakeFiles/duckdb_ast_extension.dir/src/read_ast_function.cpp.o] Error 1
gmake[2]: *** [CMakeFiles/Makefile2:9778: extension/duckdb_ast/CMakeFiles/duckdb_ast_extension.dir/all] Error 2
gmake[1]: *** [Makefile:136: all] Error 2
gmake[1]: Leaving directory '/mnt/aux-data/teague/Projects/duckdb_ast/build/debug'
make: *** [extension-ci-tools/makefiles/duckdb_extension.Makefile:73: debug] Error 2
